tests/parsing/icnf/errors/001_assumption_bad_atom_1.icnf
p inccnf
a 1 p
